Fixing some spacings with mobile

--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ body {
 
 @media only screen and (max-width: 475px) {
   #about {
-    padding-top: 75px;
+    padding-top: 25px;
   }
 
   .about_titles {
@@ -402,11 +402,11 @@ body {
   }
 
   .project_list {
-    grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
   }
 
   .project_image h3 {
-    font-size: 12px;
+    font-size: 25px;
   }
 
   .project_image a {
@@ -423,15 +423,32 @@ body {
   }
 
   .project_image p {
-    font-size: 8px;
+    font-size: 15px;
+  }
+
+  .contact_row {
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    justify-content: center;
+  }
+
+  .column {
+    flex: 100%;
   }
 
   .col_left {
-    font-size: 13px;
+    margin-top: 13px;
+    line-height: 30px;
+    font-size: 14px;
   }
 
   .col_right {
     font-size: 18px;
+    margin-top: 10px;
+    /* display: flex;
+    justify-content: space-around;
+    align-items: center; */
   }
 
   .goToTopBtn {
